# FluentUIStyle

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  blog.md  changelog.txt  common.pri  compile_flags.txt  fluentw3uistyle.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
3rd/kissfft/: CMakeLists.txt  kissfft.pri
AudiomaticMini/: AudiomaticMiniWidgets.pri  CMakeLists.txt  audiomaticplayerwidget.cpp  audiomaticplayerwidget.h  audiomaticplayerwidget.ui  audiospectrumanalyzer.cpp  main.cpp  spectrumdemowindow.cpp  spectrumdemowindow.h  spectrumwidget.cpp  spectrumwidget.h
ExWidgets/: CMakeLists.txt  ExWidgets.pri  ExWidgets.pro  README.md  README_EN.md  colorgradientslider.cpp  colorgradientslider.h  excolorpicker.cpp  excolorpicker.h  excolorpickerbutton.cpp  excolorpickerbutton.h  exmessagebox.cpp  exmessagebox.h  exnavtreewidget.cpp  exnavtreewidget.h  exrangeslider.cpp  exrangeslider.h  exspectrumwidget.cpp  exspectrumwidget.h  exstackedwidget.cpp  exstackedwidget.h  exwidgets_global.h  exwinuinavigationview.cpp  exwinuinavigationview.h
Example/: CMakeLists.txt  Example.pro  applanguage.cpp  applanguage.h  changelog.txt  colorshowcasewidget.cpp  colorshowcasewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  sinewavegenerator.cpp  sinewavegenerator.h  spectrumshowcasewidget.cpp  spectrumshowcasewidget.h  tabshowcasewidget.cpp  tabshowcasewidget.h
Example/font-icon/: font_icon.pri  fonticon.cpp  fonticon.h
Example/frameless/: dwmbackdrop.cpp  dwmbackdrop.h  fluenttitlebar.cpp  fluentwindowframe.cpp  fluentwindowframe.h
Example/tools/: fill_en_ts.py  wrap_menu_tr.py  wrap_menu_tr2.py
Example/translations/: Example_en_US.ts  i18n_embed.qrc
FluentUI3Colors/: fluentui3colors.h
cmake/: ExWidgetsConfig.cmake.in  FluentUI3StyleConfig.cmake.in  fluentw3uistyleConfig.cmake.in
fluentui3style/: CMakeLists.txt  FluentUI3Style.pro  fluentui3colors.cpp  fluentui3colors.h  fluentui3style.cpp  fluentui3style.h  fluentui3style.pri  fluentui3style_global.h  fluentui3styleplugin.cpp  fluentui3styleplugin.h  fluentui3styleplugin.json  fluentui3styleproperties.h  fluentuiappearance.cpp  fluentuiappearance.h  palettemanager.cpp  palettemanager.h  qstyleanimation.cpp  qstyleanimation_p.h  qstylehelper_p.h
fluentui3style/plugin/: CMakeLists.txt  plugin.pro
